# mengjia

./: README.md
mengjia_brain/: CMakeLists.txt  package.xml
mengjia_brain/launch/: mengjia.launch
mengjia_chat/: CMakeLists.txt  package.xml
mengjia_chat/src/: mengjia_chat.cpp
mengjia_command/: CMakeLists.txt  CMakeLists.txt.user.ef1779b  package.xml
mengjia_command/dependency/: test.bnf
mengjia_command/dependency/msc/GrmBuilld/: afheqdaa.d  akwdaaaa.d  cqvydvaa.d  cxabaaaa.d  dtpbaaaa.d  gyqtgeca.d  ipdaaaaa.d  ippbaaaa.d  jgudaaaa.d  jnhjkwba.d  koocevaa.d  kwyosuba.d  lldaaaaa.d  mftwdfca.d  osyosuba.d  rnqeaaaa.d  roecakaa.d  rtvydvaa.d  rvteaaaa.d  sstkynaa.d  uoofkwba.d  vldaaaaa.d  vpvydvaa.d  vqwdaaaa.d
mengjia_command/dependency/msc/GrmBuilld/temp/: bzvskdaa.d  crrssuba.d  dpxaaaaa.d  dqlyzjaa.d  ejdhypfa.d  fetch.g  fetch_16K  fghqdrda.d  gbqfkwba.d  gsdaaaaa.d  jdfblqga.d  kllxzjaa.d  lgceaaaa.d  lgoaqdaa.d  npxaaaaa.d  nqceaaaa.d  ovceaaaa.d  sefaaaaa.d  sppbaaaa.d  uhbaaaaa.d  vnifaaaa.d  wqxujica.d  xspaqdaa.d  zjebakaa.d  zsxaaaaa.d  ztlyzjaa.d
mengjia_command/dependency/msc/bd5df4c005251e3a0664b192046a801e/: cfg.ldata  usr.ldata
mengjia_command/dependency/msc/res/asr/GrmBuilld/: afheqdaa.d  bzvskdaa.d  fetch.g  jgudaaaa.d  jnhjkwba.d  roecakaa.d  vnifaaaa.d
mengjia_command/dependency/msc/res/asr/GrmBuilld/temp/: akwdaaaa.d  call.g  call_16K  crrssuba.d  fetch_16K  koocevaa.d  rnqeaaaa.d  rvteaaaa.d  uikawbda.d  vqwdaaaa.d  zjebakaa.d
mengjia_command/src/: mengjia_command.cpp
mengjia_command/src/include/: msp_cmn.h
