<?xml version="1.0"?>
<package>
  <name>mengjia_chat</name>
  <version>0.0.0</version>
  <description>The mengjia_chat package</description>
  <maintainer email="1172012891@qq.com">liuxin</maintainer>
  <license>NEU</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <export>
  </export>
</package>
